--- a/Calculator/Calculator/MainWindow.xaml
+++ b/Calculator/Calculator/MainWindow.xaml
@@ -23,7 +23,8 @@
     
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10*"/>
+            <RowDefinition Height="15*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -40,9 +41,15 @@
             AcceptsTab="True"
             Grid.Row="0"
             Name="CodeBox"/>
-
+        
         <Button
             Grid.Row="1"
+            Margin="10 5"
+            Content="Add function"
+            Click="AddFunction"/>
+
+        <Button
+            Grid.Row="2"
             Content="Calculate"
             Margin="10 5"
             Click="CalculateClick"/>
@@ -71,13 +78,13 @@
                     <StackPanel
                         Orientation="Horizontal">
 
-                        <TextBox
-                            TabIndex="3"
-                            Text="{Binding Path=YUpper, Mode=TwoWay}"/>
-
                         <TextBox 
                             TabIndex="4"
                             Text="{Binding Path=YLower, Mode=TwoWay}"/>
+
+                        <TextBox
+                            TabIndex="3"
+                            Text="{Binding Path=YUpper, Mode=TwoWay}"/>
                     </StackPanel>
 
                 </GroupBox>
@@ -101,13 +108,12 @@
 
                 </GroupBox>
             </StackPanel>
-
-            
                 
             <oxy:Plot 
-                Model="{Binding MyModel}" 
+                Model="{Binding PlotModel}" 
+                Margin="5"
+                x:Name="Plot1"
                 Grid.Row="1"/>  
-            
             
         </Grid>
     </Grid>
