--- a/Calculator/Calculator2/PopUp.xaml
+++ b/Calculator/Calculator2/PopUp.xaml
@@ -17,5 +17,11 @@
             Grid.ColumnSpan="2"
             Content="{Binding Title}"
             />
+        
+        <Button
+            Grid.Row="1"
+            Click="Calculate"
+            Content="Calculate"
+            />
     </Grid>
 </Window>
