--- a/Calculator/Calculator2/PopUp.xaml
+++ b/Calculator/Calculator2/PopUp.xaml
@@ -5,8 +5,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
-            <RowDefinition Height="200"/>
-            <RowDefinition Height="200"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -15,11 +15,18 @@
         
         <Label
             Grid.ColumnSpan="2"
-            Content="{Binding Title}"
+            Content="{Binding Path=TypeOfFunction}"
+            FontWeight="Bold"
+            FontSize="20"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
             />
         
         <Button
-            Grid.Row="1"
+            Grid.Row="2"
+            Width="80"
+            Height="40"
+            Grid.ColumnSpan="2"
             Click="Calculate"
             Content="Calculate"
             />
