--- a/Calculator/Calculator2/MainWindow.xaml
+++ b/Calculator/Calculator2/MainWindow.xaml
@@ -199,10 +199,10 @@
             Grid.Column="2">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="150"/>
+                <RowDefinition Height="Auto" MinHeight="200"/>
                 <RowDefinition Height="100"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="40" MaxHeight="40"/>
             </Grid.RowDefinitions>
 
             <oxy:PlotView 
