--- a/Calculator/Calculator2/PopUp.xaml
+++ b/Calculator/Calculator2/PopUp.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="Calculator2.PopUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="PopUp" Height="300" Width="300">
+        Title="PopUp" Height="280" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
             <RowDefinition Height="100"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -22,6 +22,32 @@
             VerticalAlignment="Center"
             />
         
+        <StackPanel
+            Grid.Row="1"
+            Orientation="Horizontal"
+            VerticalAlignment="Center"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center">
+        
+            <TextBlock Text="Formular: "/>
+            <TextBlock Text="{Binding Pre}"/>
+            <TextBox
+                Width="Auto"
+                MinWidth="20"
+                Height="20"
+                Text="{Binding AValue}"
+                />
+            <TextBlock Text="{Binding Mid}"/>
+            <TextBox
+                Width="Auto"
+                MinWidth="20"
+                Height="20"
+                Text="{Binding BValue}"
+                />
+            <TextBlock Text="{Binding Post}"/>
+
+        </StackPanel>
+        
         <Button
             Grid.Row="2"
             Width="80"
@@ -29,6 +55,7 @@
             Grid.ColumnSpan="2"
             Click="Calculate"
             Content="Calculate"
+            IsDefault="True"
             />
     </Grid>
 </Window>
